# radint

./: CMakeLists.txt
src/: CMakeLists.txt  agent.hpp  entity.hpp  environment.hpp  gl_agent.hpp  gl_engine.hpp  gl_entity.hpp  gl_environment.hpp  gl_simu.hpp  global.hpp  interaction.hpp  simulator.hpp  strenum.hpp
test/: CMakeLists.txt  test-000-dir.cpp  test-000-enum.cpp  test-000-interactions.cpp  test-000-vec.cpp  test-001-env.cpp  test-002-glengine.cpp  test-003-genericity.cpp
